# phoenix-csharp-bridge

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cc
src/: main.cc
src/include/: b_vdfs.hh  b_world.hh  exports.hh  vdfs.hh  world.hh
src/source/: b_vdfs.cc  b_world.cc  vdfs.cc  world.cc
